--- a/MDC/MDC.html
+++ b/MDC/MDC.html
@@ -24,19 +24,19 @@
   
 	<div id="impress" >
 		<div id="title" class="step slide" data-x="0" data-y="0" data-scale="40"  >
-			<p><strong>MDC PNC 2013/14</strong></p>
+			<q><strong>MDC PNC 2013/14</strong></q>
 			</p>
-			<p>MDC Sécurité Sauvetage saison 2012/14</p>
+			<p>MDC SÃ©curitÃ© Sauvetage saison 2012/14</p>
 		</div>
 	  
-		<div id="idees" class="step slide" data-x="-1440" data-y="-11730" data-z="-160" data-rotate-z="90" data-scale="1">
-			<p><strong>3 Idées Force :</strong>
+		<div id="idees" class="step slide" data-x="-6600" data-y="-8400" data-z="-160" data-rotate-z="90" data-scale="1">
+			<q><strong>3 IdÃ©es Force :</strong>
 				<ul>
 					<li>Solliciter les PN</li>
-					<li>Parcours individualisés type ATQP<li>
-					<li>Pratique et CRM en équipage tout au long de la journée</li>
+					<li>Parcours individualisÃ©s type ATQP<li>
+					<li>Pratique et CRM en Ã©quipage tout au long de la journÃ©e</li>
 				</ul>
-			</p>
+			</q>
 		 </div>
 		  
       </div>
